--- a/project-web-client/app/user/user.module.css
+++ b/project-web-client/app/user/user.module.css
@@ -1,10 +1,13 @@
 /* NotesList.module.css */
 
+.noteTabContainer {
+  display: inline-flex;
+}
 .notesContainer {
-    display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: flex-start;
-    width: 30%; /* Adjust the width as needed */
+    width: 30%;
   }
   
   .noteBox {
@@ -17,7 +20,51 @@
     text-align: left;
     width: 100%;
   }
-  
+
   .noteBox:hover {
     background-color: #e0e0e0;
+  }
+
+  .newNoteButton {
+    background-color: #007acc;
+    color: #fff;
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+ .noteName {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-right: 10px;
+  }
+
+
+  .selectedNoteContainer {
+    flex: 1;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  
+  .selectedNote {
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    height: 100%;
+    overflow: auto;
+  }
+  .noteEditor {
+    width: 100%;
+    height: 100%;
+    border: none;
+    resize: none;
+    font-size: 16px;
+    line-height: 1.6;
   }
